[package]
name = "counter-rpc-client"
version = "0.1.0"
authors = ["Aganin E.V <aganin.ev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.8.3"
solana-program = "1.8.3"
solana-sdk = "1.8.3"
borsh = "0.9.1"
counter = { path = "../smart-contract" }
